<?xml version="1.0"?>
<package format="2">
  <name>ur_planner</name>
  <version>0.0.0</version>
  <description>The ur_planner package</description>

  <maintainer email="davideferr@unimore.it">Davide Ferrari</maintainer>

  <license>BSD-3</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>

</package>
